# backbone

./: .gitignore  CMakeLists.txt  Makefile  conanfile.txt
app/: CMakeLists.txt  qml.qrc
app/qml/: dashboard.qml  detail.qml  index.qml  main.qml  search.qml
app/qml/cards/: BranchMini.qml
app/src/: main.cpp
app/src/presenters/: branchpresenter.cpp  branchpresenter.h  detailpagepresenter.h  indexpagepresenter.cpp  indexpagepresenter.h  schedulepresenter.cpp  schedulepresenter.h  searchpagepresenter.cpp
backbone/: CMakeLists.txt
backbone/include/backbone/: appcontroller.h  delegatebuilder.h  executors.h  fwd.h  injector.h  injectorblock.h  injectorbuilder.h  page.h  pagepresenter.h  qmlcomponentscache.h  qmlglobalscope.h  qmlinjector.h  qmlinjectorbuilder.h  router.h  scope.h
backbone/src/: appcontroller.cpp  applicationframe.cpp  block.cpp  delegatebuilder.cpp  executors.cpp  global.cpp  injector.cpp  injectorblock.cpp  injectorbuilder.cpp  page.cpp  pagepresenter.cpp  qmlcomponentscache.cpp  qmlinjector.cpp  qmlinjectorbuilder.cpp  router.cpp  scope.cpp
